--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
-    "watch": "^1.0.2"
+    "watch": "^1.0.2",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
